fixed geometry on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,11 +27,6 @@ textarea {
 	position: relative; 
 	width: 500px;  
 	height: 500px; 
-
-	/*height: 500px; 
-	width: 500px; 
-	/*max-width: 100%; 
-	max-height: 66%;*/ 
 	overflow: hidden; 
 }
 
@@ -42,11 +37,6 @@ textarea {
 	left: 0px; 
 	width: 500px; 
 	height: 500px; 
-
-	/*width: 500px; 
-	height: 500px; 
-	/*max-width: 100%;
-	max-height: 66%; */ 
 }
 
 /* link to team maps */ 
@@ -54,3 +44,4 @@ textarea {
 	position: relative; 
 	clear: both; 
 }
+
